objects/VisualAntidote__Previous_Form__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__API_Version__c</fullName>
        <label>Schema API Version</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__AdminEmail__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>Logged In user Email always</description>
        <label>AdminEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Context_Type__c</fullName>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <default>true</default>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Disable_Lookup_Visible_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>suppress lookup visibility warning</description>
        <label>Disable Lookup Visible Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Disable_Save_for_later_warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Save for later warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Draft_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Draft Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Templates</relationshipLabel>
        <relationshipName>Drafts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Draft_Status__c</fullName>
        <label>Draft Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Dynamic_Prefill_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynamic Prefill Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__EmailDraft__c</fullName>
        <description>Text for Email Template</description>
        <inlineHelpText>Text for Email Template</inlineHelpText>
        <label>EmailDraft</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__EmailTemplateConfigFields__c</fullName>
        <description>Fields to configure email template elements</description>
        <label>EmailTemplateConfigFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__EmailToNotify__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>Email for notification</description>
        <label>EmailToNotify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__EnableEmailNotifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Email notifications</description>
        <label>EnableEmailNotifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__ExportLinksData__c</fullName>
        <label>ExportLinksData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__FastFormID__c</fullName>
        <label>FormstackID</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Prefill_Info__c</fullName>
        <label>Fast Prefill Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fields_Object_xml__c</fullName>
        <label>Fields Object xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fields_xml__c</fullName>
        <label>Fields xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__FormType__c</fullName>
        <label>FormType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClassicRegular</fullName>
                    <default>true</default>
                    <label>ClassicRegular</label>
                </value>
                <value>
                    <fullName>ClassicLightning</fullName>
                </value>
                <value>
                    <fullName>NativeRegular</fullName>
                </value>
                <value>
                    <fullName>NativeLightning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Final_Html__c</fullName>
        <label>Form Final Html</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Html__c</fullName>
        <label>Form Html</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_ID__c</fullName>
        <description>for  track of the Form ID separately for Object</description>
        <label>Form ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Number__c</fullName>
        <label>Form Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Options__c</fullName>
        <label>Form Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Type__c</fullName>
        <description>Deprecated</description>
        <label>Deprecated Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClassicRegular</fullName>
                    <default>true</default>
                    <label>ClassicRegular</label>
                </value>
                <value>
                    <fullName>ClassicLightning</fullName>
                </value>
                <value>
                    <fullName>NativeRegular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__HasEmailDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email has  draft</description>
        <inlineHelpText>Email has  draft</inlineHelpText>
        <label>HasEmailDraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Hidden_Related_Object__c</fullName>
        <label>Hidden Related Object</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Hidden_Secondary_Object__c</fullName>
        <label>Hidden Secondary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Hide_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Hosted_Form_ID__c</fullName>
        <description>Hosted Form ID</description>
        <label>Hosted Form ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Fast_Prefill_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fast Prefill Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native_Prefill_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native Prefill Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Simple_Web_Interface_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Simple Web Interface Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__JSCode__c</fullName>
        <description>Javascript text</description>
        <label>JSCode</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Confirmation_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Confirmation Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Confirmation_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable - Send Form PDF File to Salesforce Files</description>
        <label>PDF Confirmation Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Confirmation_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Confirmation Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Name__c</fullName>
        <label>PDF Name</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Send_To_Email__c</fullName>
        <label>PDF Send To Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PDF_Send_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Send To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Configuration__c</fullName>
        <description>Community forms prefill configuration data in JSON Format</description>
        <label>Prefill Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Key__c</fullName>
        <label>Prefill Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Object_Info__c</fullName>
        <label>Prefill Object Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Object_list__c</fullName>
        <label>Prefill Object list</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Secret_Key__c</fullName>
        <label>Prefill Secret Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_Trigger_Name__c</fullName>
        <description>Name for trigger generated by Auto-generated prefill feature of formstack</description>
        <inlineHelpText>Name for trigger - prefix FFPrefill_</inlineHelpText>
        <label>Prefill Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Prefill_URL__c</fullName>
        <label>Prefill URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Related_Object_Info__c</fullName>
        <label>Related Object Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Related_Object__c</fullName>
        <label>Related Object</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Secondary_Object__c</fullName>
        <label>Secondary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>VisualAntidote__Form_Style__c</referenceTo>
        <relationshipLabel>Templates</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__TrackingEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tracking Enabled</description>
        <label>TrackingEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Url_Param_Str__c</fullName>
        <label>Url Param Str</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Use_REST_API__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use REST API</label>
        <type>Checkbox</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>VisualAntidote__Draft_Form__c</columns>
        <columns>VisualAntidote__Draft_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__Custom_template_list</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Dynamic_Prefill_Enabled__c</columns>
        <columns>VisualAntidote__FastFormID__c</columns>
        <columns>VisualAntidote__Fields_xml__c</columns>
        <columns>VisualAntidote__Form_Final_Html__c</columns>
        <columns>VisualAntidote__Fields_Object_xml__c</columns>
        <columns>VisualAntidote__Form_ID__c</columns>
        <columns>VisualAntidote__Hosted_Form_ID__c</columns>
        <columns>VisualAntidote__Object_Name__c</columns>
        <columns>VisualAntidote__Hidden_Secondary_Object__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisualAntidote__Hosted_Form_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Custom template list</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>